[package]
name = "yadm"
version = "0.1.0"
authors = ["Jake Schurch <jakeschurch@gmail.com>"]
edition = "2018"
repository = "https://github.com/jakeschurch/badm"
readme = "README.md"
license = "MIT"
categories = ['command-line-utilities']

[badges]
is-it-maintained-issue-resolution = { repository = "jakeschurch/badm" }
is-it-maintained-open-issues = { repository = "jakeschurch/badm" }
maintenance = { status = "actively-developed" }

[dependencies]
