[package]
name = "badm"
version = "0.4.3"
authors = ["Jake Schurch <jakeschurch@gmail.com>"]
edition = "2018"
repository = "https://github.com/jakeschurch/badm"
readme = "README.md"
license = "MIT"
categories = ['command-line-utilities']
description = "But another dotfile manager."

[badges]
is-it-maintained-issue-resolution = { repository = "jakeschurch/badm" }
is-it-maintained-open-issues = { repository = "jakeschurch/badm" }
maintenance = { status = "actively-developed" }

[[bin]]
name = "badm"
path = "src/main.rs"

[dev-dependencies]
dirs = "2.0.2"
tempfile = "3.1.0"

[dependencies]
clap = "2.33.0"
toml = "0.5.4"
serde = "1.0.102"
serde_derive = "1.0.102"
dirs = "2.0.2"
failure = "0.1.6"
glob = "0.3.0"
